5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1716_2508.log
== TEST (2019-05-15 02:48:06) 
-- CODE:
n = int(input("termo de repeticão"))

soma = 3
i = 0
sinal = 1
d=1
while(i<n):
	soma = soma + sinal*(4/(d*2)*(d*2+1)*(d*2+2))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:48:20) 
-- CODE:
n = int(input("termo de repeticao"))

soma = 3
i = 0
sinal = 1
d=1
while(i<n):
	soma = soma + sinal*(4/(d*2)*(d*2+1)*(d*2+2))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:48:28) 
-- CODE:
n = int(input("termo de repeticao: "))

soma = 3
i = 0
sinal = 1
d=1
while(i<n):
	soma = soma + sinal*(4/(d*2)*(d*2+1)*(d*2+2))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:48:41) 
-- CODE:
n = int(input("termo de repeticao: "))

soma = 3
i = 0
sinal = 1
d=1
while(i<n):
	soma = soma + sinal*(4/(d*2)*(d*2+1)*(d*2+2))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:50:18) 
-- CODE:
n = int(input("termo de repeticao: "))

soma = 3
i = 0
sinal = 1
d=1
while(i<n):
	soma = soma + sinal*(4/(d*2)*(d*2+1)*(d*2+2))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:55:13) 
-- CODE:
n = int(input("termo de repeticao: "))

soma = 3
i = 0
sinal = 1
d=1
while(i<n):
	soma = soma + sinal*(4/(d*2)*(d*2+1)*(d*2+2))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 02:56:08) 
-- CODE:
n = int(input("termo de repeticao: "))

soma = 3
i = 0
sinal = 1
d=1
while(i<n):
	soma = soma + (sinal*(4/(d*2)*(d*2+1)*(d*2+2)))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:08:08) 
-- CODE:
n = int(input("termo de repeticao: "))

soma = 3
i = 0
sinal = 1
d = 1
while(i<n):
	soma = soma + (sinal(4/(1+d)*(2+d)*(3+d)))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + (sinal(4/(1+d)*(2+d)*(3+d)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:08:20) 
-- CODE:
n = int(input("termo de repeticao: "))

soma = 3
i = 0
sinal = 1
d = 1
while(i<n):
	soma = soma + (sinal(4/(1+d)*(2+d)*(3+d)))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + (sinal(4/(1+d)*(2+d)*(3+d)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:14:25) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1
d = 0
while(i<n):
	soma = soma +(sinal*(4/(d*2)*(d*2+1)*(d*2+2)))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma +(sinal*(4/(d*2)*(d*2+1)*(d*2+2)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:15:24) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1
d = 1
while(i<n):
	soma = soma +(sinal*(4/(d*2)*(d*2+1)*(d*2+2)))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:15:51) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = -1
d = 1
while(i<n):
	soma = soma +(sinal*(4/(d*2)*(d*2+1)*(d*2+2)))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
-36.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:18:19) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1
d = 1
while(i<n):
	soma = soma +(sinal*(4/d*(2)*(2+1)*(2+2)))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
78.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:18:20) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = -1
d = 1
while(i<n):
	soma = soma +(sinal*(4/d*(2)*(2+1)*(2+2)))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
-72.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:18:28) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1
d = 1
while(i<n):
	soma = soma +(sinal*(4/d*(2)*(2+1)*(2+2)))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
78.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:19:35) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1
d = 1
while(i<n):
	soma = soma +(sinal*(4/d*((2)*(2+1)*(2+2))))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
78.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:19:54) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1
d = 1
while(i<n):
	soma = soma +(sinal*(4/(d*((2)*(2+1)*(2+2)))))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.13055556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 03:20:39) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1
d = 1
while(i<n):
	soma = soma +(sinal*(4/(d*((2)*(2+1)*(2+2)))))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- EXECUTION TIME:
0.208439
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13055556
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.11182265
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.11979523
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:36:41) 
-- CODE:
n = int(input("termo de repeticao: "))
soma= 0
i = 0
sinal = 1
d = 1
while(i<n):
	soma = soma + 3 +((sinal*4)/(2*d+2)*(2*d+3)*(2*d+4))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
60.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:37:19) 
-- CODE:
n = int(input("termo de repeticao: "))
soma= 0
i = 0
sinal = 1
d = 1
while(i<n):
	soma =  3 +((sinal*4)/(2*d+2)*(2*d+3)*(2*d+4))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
63.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:37:38) 
-- CODE:
n = int(input("termo de repeticao: "))
soma= 3
i = 0
sinal = 1
d = 1
while(i<n):
	soma = soma +((sinal*4)/(2*d+2)*(2*d+3)*(2*d+4))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
48.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:37:48) 
-- CODE:
n = int(input("termo de repeticao: "))
soma= 3
i = 0
sinal = 1
d = 1
while(i<n):
	soma = soma +((sinal*4)/(2*d+2)*(2*d+3)*(2*d+4))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
48.53333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:38:45) 
-- CODE:
n = int(input("termo de repeticao: "))
soma= 3
i = 0
sinal = 1
d = 1
while(i<n):
	soma = soma +((sinal*4))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:38:55) 
-- CODE:
n = int(input("termo de repeticao: "))
soma= 3
i = 0
sinal = 1
d = 1
while(i<n):
	soma = soma +((sinal*4))
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:39:44) 
-- CODE:
n = int(input("termo de repeticao: "))
soma= 3
i = 0
sinal = 1
d = 1
while(i<n):
	soma = soma + 1
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:40:07) 
-- CODE:
n = int(input("termo de repeticao: "))
soma= 3
i = 0
sinal = 1
d = 1
while(i<n):
	soma = soma 
	d= d +1
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:48:52) 
-- CODE:
n = int(input("termo de repeticao: "))
soma= 3
i = 0
sinal = 1

while(i<n):
	soma = soma + (4 *(sinal))/(2*i+2)*(2*i+3)*(2*i+4)
	
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:49:24) 
-- CODE:
n = int(input("termo de repeticao: "))
soma= 3
i = 0
sinal = 1

while(i<n):
	soma = 3 + (4 *(sinal))/(2*i+2)*(2*i+3)*(2*i+4)
	
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
55.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 03:50:00) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = 3 + (4 *(sinal))/(2*i+2)*(2*i+3)*(2*i+4)
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- EXECUTION TIME:
0.179289
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
55.8
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
-185.18181818
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
167.21052632
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:50:29) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = -1

while(i<n):
	soma =  + (4 *(sinal))/(2*i+2)*(2*i+3)*(2*i+4)
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
-52.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:50:48) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  + (4 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
0.0030303
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:51:05) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + (4 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:51:30) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 0
i = 0
sinal = 1

while(i<n):
	soma = soma + (4 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
0.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:51:49) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 0
i = 0
sinal = 1

while(i<n):
	soma = soma +3+ (4 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
15.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 03:51:58) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 0
i = 0
sinal = 1

while(i<n):
	soma = soma +3+ (4 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- EXECUTION TIME:
0.213436
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
15.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
66.14157215
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
57.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 03:53:07) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 4
i = 0
sinal = 1

while(i<n):
	soma = 3+ soma *(1 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.00226956
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:01:20) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 1
sinal = 1

while(i<n):
	soma =  *(1 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- ERROR:
File "XXXX", line 7
    soma =  *(1 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
           ^
SyntaxError: can't use starred expression here
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:01:44) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 1
sinal = 1

while(i<n):
	soma =  soma + 4 *(1 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.02395382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:01:55) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 1
sinal = 1

while(i<n):
	soma =  soma + 4 *(1 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.02395382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 04:02:04) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 1
sinal = 1

while(i<n):
	soma =  soma + 4 *(1 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- EXECUTION TIME:
0.193381
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.02395382
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.02509451
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.02504286
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:02:45) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 1
sinal = 1

while(i<n):
	soma =  soma + 4 *(1 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.02395382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:02:55) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 1
sinal = 1

while(i<n):
	soma =  soma + 4 *(1 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.02395382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:03:03) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 1
sinal = 1

while(i<n):
	soma =  soma + 4 *(1 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.02395382
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:03:23) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma + 4 *(1 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 04:03:32) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma + 4 *(1 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- EXECUTION TIME:
0.195246
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.14271284
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14157215
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14162381
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:03:41) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 0
i = 0
sinal = 1

while(i<n):
	soma =  soma + 4 *(1 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
0.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:03:57) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 0
i = 0
sinal = 1

while(i<n):
	soma =  soma + 4 *(1 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
0.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:05:07) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma + (4 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:05:19) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma + (4 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:06:26) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = -1

while(i<n):
	soma =  soma + (4 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
2.85728716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:06:37) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = -1

while(i<n):
	soma =  soma + (4 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
2.85728716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:06:52) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma + (4 *(sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:07:52) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma + ((sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.03567821
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:08:03) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma + ((sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.03567821
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:08:22) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma + 4*((sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:09:32) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma + 4*((sinal))/((2*i+1)*(2*i+2)*(2*i+3))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.61515152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:09:59) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma + 4*((sinal))/((2*i+0)*(2*i+1)*(2*i+2))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma =  soma + 4*((sinal))/((2*i+0)*(2*i+1)*(2*i+2))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:10:21) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma + 4*((sinal))/((2*i+1)*(2*i+2)*(2*i+3))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.61515152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:10:29) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma + 4*((sinal))/((2*i+1)*(2*i+2)*(2*i+3))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.61515152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 04:10:36) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma + 4*((sinal))/((2*i+1)*(2*i+2)*(2*i+3))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.61515152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:37:14) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma + 1*((sinal))/((2*i+1)*(2*i+2)*(2*i+3))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.15378788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:45:39) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma + 1*((sinal))/((2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.03567821
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:46:57) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma 
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:47:06) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma 
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:48:48) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma 
	soma = soma + (4*sinal)/(2*i+2)*(2*i+3)*(2*i+4)
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:49:31) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma 
	soma = soma + 4* sinal/(2*i+2)*(2*i+3)*(2*i+4)
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:49:42) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma 
	soma = soma + 4* sinal/(2*i+2)*(2*i+3)*(2*i+4)
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:50:09) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma 
	soma = soma + 4 + sinal/(2*i+2)*(2*i+3)*(2*i+4)
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
32.78333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:51:24) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma =  soma 
	soma = soma + 4 + sinal/(2*i+2)*(2*i+3)*(2*i+4)
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
32.78333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:53:04) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + (4 * sinal/(2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal * (-1)
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:54:42) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 

while(i<n):
	soma = soma + (4 * ((-1)**i)/(2*i+2)*(2*i+3)*(2*i+4))
	sinal = 
	i = i + 1
print(round(soma,8))
-- ERROR:
File "XXXX", line 4
    sinal = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:54:56) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0


while(i<n):
	soma = soma + (4 * ((-1)**i)/(2*i+2)*(2*i+3)*(2*i+4))
	
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:55:03) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0


while(i<n):
	soma = soma + (4 * ((-1)**i)/(2*i+2)*(2*i+3)*(2*i+4))
	
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:55:31) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0


while(i<n):
	soma = soma + (4 /(2*i+2)*(2*i+3)*(2*i+4))
	
	i = i + 1
print(round(soma,8))
-- OUTPUT:
192.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:02:45) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0


while(i<n):
	soma = soma 
	soma = (4 /(2*i+2)*(2*i+3)*(2*i+4))
	
	i = i + 1
print(round(soma,8))
-- OUTPUT:
52.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:03:01) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0


while(i<n):
	soma = soma 
	soma = (4 /(2*i+2)*(2*i+3)*(2*i+4))
	
	i = i + 1
print(round(soma,8))
-- OUTPUT:
52.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:07:53) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + (4 * i*sinal)/(2*i+2)*(2*i+3)*(2*i+4)
	
	
	i = i + 1
print(round(soma,8))
-- OUTPUT:
453.86666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:08:01) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + (4 * i*sinal)/(2*i+2)*(2*i+3)*(2*i+4)
	
	
	i = i + 1
print(round(soma,8))
-- OUTPUT:
453.86666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:08:09) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + (4 * i*sinal)/(2*i+2)*(2*i+3)*(2*i+4)
	
	
	i = i + 1
print(round(soma,8))
-- OUTPUT:
453.86666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:08:18) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + (4 * i*sinal)/(2*i+2)*(2*i+3)*(2*i+4)
	
	
	i = i + 1
print(round(soma,8))
-- OUTPUT:
453.86666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:08:48) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + (4 *sinal)/(2*i+2)*(2*i+3)*(2*i+4)
	sinal = sinal + 1	
	i = i + 1
print(round(soma,8))
-- OUTPUT:
643.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:09:01) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + (4*i *sinal)/(2*i+2)*(2*i+3)*(2*i+4)
	sinal = sinal + 1	
	i = i + 1
print(round(soma,8))
-- OUTPUT:
1883.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:09:08) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + (4*i *sinal)/(2*i+2)*(2*i+3)*(2*i+4)
	sinal = sinal + 1	
	i = i + 1
print(round(soma,8))
-- OUTPUT:
1883.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:10:06) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma 
	soma =+(4*i *sinal)/(2*i+2)*(2*i+3)*(2*i+4)
	sinal = sinal + 1	
	i = i + 1
print(round(soma,8))
-- OUTPUT:
1056.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:10:18) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma 
	soma =+(4*i *sinal)/(2*i+2)*(2*i+3)*(2*i+4)
	sinal = sinal + 1	
	i = i + 1
print(round(soma,8))
-- OUTPUT:
1056.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:11:07) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma 
	soma =+(4*i *sinal)/(2*i+2)*(2*i+3)*(2*i+4)
	sinal = sinal + 1	
	i = i + 1
print(round(soma,8))
-- OUTPUT:
1056.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:11:47) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma 

	sinal = sinal *(-1) 
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:19:48) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + (sinal * 4)

	sinal = sinal *(-1) 
	i = i + 1
print(round(soma,8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:20:04) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + (sinal * 4)

	sinal = sinal *(-1) 
	i = i + 1
print(round(soma,8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:23:07) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + (sinal * 4)

	sinal = sinal *(-1) 
	i = i + 1
print(round(soma,8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:32:40) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + (sinal)/(2*i+2)

	sinal = sinal *(-1) 
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.39166667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:33:35) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + (sinal)/(2*i+2)*(2*i+3)*(2*i+4)

	sinal = sinal *(-1) 
	i = i + 1
print(round(soma,8))
-- OUTPUT:
12.78333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:34:17) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + (sinal)/(2*i+2)*(2*i+3)*(2*i+4)

	sinal = sinal *(-1) 
	i = i + 1
print(round(soma,8))
-- OUTPUT:
12.78333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:35:19) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + (4*sinal)/(2*i+2)*(2*i+3)*(2*i+4)

	sinal = sinal *(-1) 
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:35:47) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + ((4*sinal)/(2*i+2)*(2*i+3)*(2*i+4))

	sinal = sinal *(-1) 
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:37:24) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + ((4*sinal)/(2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal *(-1) 
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:39:51) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + ((4*sinal)/(2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal *(-1) 
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:40:01) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + ((4*sinal)/(2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal *(-1) 
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:40:52) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + ((4*sinal)/(2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal *(-1) 
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:40:52) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + ((4*sinal)/(2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal *(-1) 
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:40:53) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 0
sinal = 1

while(i<n):
	soma = soma + ((4*sinal)/(2*i+2)*(2*i+3)*(2*i+4))
	sinal = sinal *(-1) 
	i = i + 1
print(round(soma,8))
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:46:24) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 1
sinal = 1

while(i<n):
	soma = soma + ((4*sinal)/(2*i)*(2*i+1)*(2*i+2))
	sinal = sinal *(-1) 
	i = i + 1
print(round(soma,8))
-- OUTPUT:
-10.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:46:46) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 1
sinal = 1

while(i<n):
	soma = soma + ((4*sinal)/(2*i)*(2*i+1)*(2*i+2))
	sinal = sinal *(-1) 
	i = i + 1
print(round(soma,8))
-- EXECUTION TIME:
0.168799
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
-10.66666667
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
105.8655618
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
-66.3354407
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:49:09) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 1


while(i<n):
	x = (2*i)*(2*i+1)*(2*i+2)
	soma = soma + (-1)**(i+1)*4/x
	i = i + 1
print(round(soma,8))
-- EXECUTION TIME:
0.16467
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:40:41) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 1


while(i<n):
	x = (2*i)*(2*i+1)*(2*i+2)
	soma = soma + (-1)**(i+1)*4/x
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:44:48) 
-- CODE:
n = int(input("termo de repeticao: "))
soma = 3
i = 1


while(i<n):
	x = (2*i)*(2*i+1)*(2*i+2)
	soma = soma + (-1)**(i+1)*4/x
	i = i + 1
print(round(soma,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
